# Project-Coast-Edu

./: CODEOWNERS  LICENSE  README.md  test.session.sql
Backend/: README.md  docker-compose.yml  init_users.sql
Backend/Authentication/: dockerfile
Backend/Authentication/auth-service/: .gitignore  Cargo.toml
Backend/Authentication/auth-service/src/: .gitignore  auth_service.rs  main.rs  privkey.pem  publickey.pem
Backend/Authentication/auth-service/src/authentication/: auth_service.rs  auth_structs.rs  mod.rs
Backend/Authentication/auth-service/src/authz/: auth_models.rs  auth_service.rs
Backend/Authentication/auth-service/src/cache/: cache_service.rs
Backend/Authentication/auth-service/src/email/: email_service.rs  mod.rs
Backend/Authentication/auth-service/src/user_services/: mod.rs  user_structs.rs  users_services.rs
Backend/Database/: README.md  dockerfile
Backend/Database/db-service/: .env  Cargo.toml
Backend/RustServer/: dockerfile
Backend/RustServer/auth-service/: Cargo.toml
Backend/RustServer/auth-service/src/: main.rs  models.rs
Backend/RustServer/auth-service/src/authentication/: .gitignore  auth_service.rs  auth_structs.rs  mod.rs
Backend/RustServer/auth-service/src/authentication/keys/: privkey.pem  publickey.pem
Backend/RustServer/auth-service/src/email/: email_service.rs  email_structs.rs  mod.rs
Backend/RustServer/auth-service/src/user_services/: mod.rs  user_structs.rs  users_services.rs
Backend/SchedulerService/: Schedulez.py  dockerfile  main.py
Frontend/mobile/frontend_mobile_app/: .gitignore  pubspec.yaml
(+58 files in other folders)
