[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1" #web server
serde = {version = "1.0", features = ["derive"] }
bcrypt = "0.15.0" #hashing
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio"]} # DB communication
jsonwebtoken = "8.3.0"
env_logger = "0.10.0"
rand = "0.8.5"

