[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.3.1"
serde = {features = ["derive"] ,version = "1.0.188"}
bcrypt = "0.15.0"
sqlx = {version = "0.7.1", features = ["postgres","runtime-tokio"]}
jsonwebtoken = "8.3.0"


