[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = {version = "4.3.1"}
serde = {features = ["derive"] ,version = "1.0.188"}
sqlx = {version = "0.7.1", features = ["postgres","runtime-tokio","uuid"]}
jsonwebtoken = "8.3.0"
env_logger = "0.10.0"
serde_json = "1.0.105"
lettre = "0.10.4"
argon2 = "0.5.2"
